Update locatoin of distribution chart depth label

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="input-container">
         <input class="input-item min" type="number" id="I-min-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Min">
-        <div class="label">Min Ix</div>
+        <div class="label">Min I<sub>x</sub></div>
       </div>
       <!-- <div class="input-container">
         <input class="input-item max" type="number" id="I-max-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Max">
