Finalize Moment of Inertia chart and tweak styles of moment chart

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </div>
 
     <div id="bottom-container">
+      <div class="chart-title">
+        <div class="primary">_ in<sup>4</sup></div>
+        <div class="secondary">MOMENT OF INERTIA</div>
+      </div>
     </div>
   </div>
   <div id="right-column">
