Improve imput suffix

--- a/index.html
+++ b/index.html
@@ -29,32 +29,34 @@
     <div id="top-row">
       <div class="inputs-title">Inputs</div>
 
-      <div class="input-container">
-        <input class="input-item min" type="number" id="moment-min-input" min="0" onkeyup="updateMoment()" onmousedown="updateMoment()" onmouseup="updateMoment()" placeholder="Add Min">
-        <div class="label">Min Moment</div>
-      </div>
-      <!-- <div class="input-container">
-        <input class="input-item max" type="number" id="moment-max-input" min="0" onkeyup="updateMoment()" onmousedown="updateMoment()" onmouseup="updateMoment()" placeholder="Add Max">
-        <div class="label">Max Moment</div>
-      </div> -->
+      <div class="inputs">
+        <div class="input-container">
+          <input class="input-item min" type="number" lang="en-150" id="moment-min-input" min="0" onkeyup="updateMoment()" onmousedown="updateMoment()" onmouseup="updateMoment()" placeholder="Add Min">
+          <div class="label">Min Moment <span class="suffix">k-ft</span></div>
+        </div>
+        <!-- <div class="input-container">
+          <input class="input-item max" type="number" lang="en-150" id="moment-max-input" min="0" onkeyup="updateMoment()" onmousedown="updateMoment()" onmouseup="updateMoment()" placeholder="Add Max">
+          <div class="label">Max Moment</div>
+        </div> -->
 
-      <!-- <div class="input-container">
-        <input class="input-item min" type="number" id="weight-min-input" min="0" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" placeholder="Add Min">
-        <div class="label">Min Weight</div>
-      </div> -->
-      <div class="input-container">
-        <input class="input-item max" type="number" id="weight-max-input" min="0" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" placeholder="Add Max">
-        <div class="label">Max Weight</div>
-      </div>
+        <!-- <div class="input-container">
+          <input class="input-item min" type="number" lang="en-150" id="weight-min-input" min="0" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" placeholder="Add Min">
+          <div class="label">Min Weight</div>
+        </div> -->
+        <div class="input-container">
+          <input class="input-item max" type="number" lang="en-150" id="weight-max-input" min="0" onkeyup="updateWeight()" onmousedown="updateWeight()" onmouseup="updateWeight()" placeholder="Add Max">
+          <div class="label">Max Weight <span class="suffix">plf</span></div>
+        </div>
 
-      <div class="input-container">
-        <input class="input-item min" type="number" id="I-min-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Add Min">
-        <div class="label">Min I<sub>x</sub></div>
+        <div class="input-container">
+          <input class="input-item min" type="number" lang="en-150" id="I-min-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Add Min">
+          <div class="label">Min I<sub>x</sub> <span class="suffix">in<sup>4</sup></span></div>
+        </div>
+        <!-- <div class="input-container">
+          <input class="input-item max" type="number" lang="en-150" id="I-max-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Add Max">
+          <div class="label">Max Ix</div>
+        </div> -->
       </div>
-      <!-- <div class="input-container">
-        <input class="input-item max" type="number" id="I-max-input" min="0" onkeyup="updateI()" onmousedown="updateI()" onmouseup="updateI()" placeholder="Add Max">
-        <div class="label">Max Ix</div>
-      </div> -->
 
     </div>
     <div id="middle-row">
