Add link to blog

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div>STEEL</div>
         <div>EXPLORER</div>
       </div>
+      <a href="http://jonsadka.com/" class="jon-sadka" target="_blank">by Jon Sadka</a>
     </div>
 
     <div id="middle-container">
