--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<head>
+  <html lang="en">
+  <meta charset="utf-8">
+  <title>Steel Explorer by Jon Sadka</title>
+  <meta name="description" content="Steel Explorer by Jon Sadka ">
+  <meta name="viewport" content="width=device-width">
+
+  <!-- Mobile features -->
+  <link rel="apple-touch-startup-image" href="/icons/apple-icon.png">
+  <link rel="apple-touch-icon" href="/icons/apple-icon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
+
+  <!-- Add to homescreen for Chrome on Android + Colored Tilebar on Chrome Android -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Add to homescreen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Steel Explorer">
+  <link rel="mask-icon" href="icons/icon.svg" color="#3B4C7A">
+
+  <!-- Tile icon for Windows 10 (144x144 + tile color) -->
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
+
+  <!--Website Details-->
+  <meta name="author" content="Jon Sadka">
+  <meta property="og:url" content="http://jonsadka.github.io/steel-explorer/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Steel Explorer" />
+  <meta property="og:description" content="Steel Explorer by Jon Sadka" />
+  <meta property="og:image" content="/icons/ms-icon-310x310.png" />
+</head>
 <body>
   <div id="left-column">
     <div id="top-container">
