--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Add to homescreen for Chrome on Android + Colored Tilebar on Chrome Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#D8D8D8">
   <link rel="manifest" href="/manifest.json">
 
   <!-- Add to homescreen for Safari on iOS -->
@@ -37,7 +37,7 @@
   <link rel="mask-icon" href="icons/icon.svg" color="#3B4C7A">
 
   <!-- Tile icon for Windows 10 (144x144 + tile color) -->
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#D8D8D8">
   <meta name="msapplication-TileImage" content="/steel-explorer/icons/ms-icon-144x144.png">
 
   <!--Website Details-->
