--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <!-- Tile icon for Windows 10 (144x144 + tile color) -->
   <meta name="msapplication-TileColor" content="#D8D8D8">
-  <meta name="msapplication-TileImage" content="/steel-explorer/icons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
   <!--Website Details-->
   <meta name="author" content="Jon Sadka">
