--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Add to homescreen for Chrome on Android + Colored Tilebar on Chrome Android -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#D8D8D8">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
