Update readme and styles of rattributions

--- a/index.html
+++ b/index.html
@@ -126,26 +126,16 @@
     </div>
     <div id="bottom-row">
     </div>
-      <div class="attribution">
-      <a target="_blank" href="https://www.aisc.org/publications/steel-construction-manual-resources#37584">
-        Data Attribution: AISC Shapes v15.0
+    <div class="attributions">
+      <a target="_blank" href="https://github.com/jonsadka/steel-explorer#assumptions">
+        Assumptions
       </a>
-    </div>
-      <div class="attribution">
       <a target="_blank" href="https://www.aisc.org/publications/steel-construction-manual-resources#37583">
-        Calculation Attribution: AISC Design Examples v15.0
+        Calculations
       </a>
-    </div>
-      <div>
-      Assumptions
-      <ul>
-        <li>Cb = 1</li>
-        <li>DOUBLY SYMMETRIC COMPACT I-SHAPED MEMBERS AND CHANNELS BENT ABOUT THEIR MAJOR AXIS</li>
-        <li>Fy = 50 ksi </li>
-        <li>E = 29000 ksi</li>
-        <li>straight line interpolation between points</li>
-        <li>c = 1 from AISC Specification Equation F2-8a for doubly symmetric I-shaped members</li>
-      </ul>
+      <a target="_blank" href="https://www.aisc.org/publications/steel-construction-manual-resources#37584">
+        Data Attribution
+      </a>
     </div>
   </div>
 </body>
