--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Steel Explorer by Jon Sadka</title>
   <meta name="description" content="Steel Explorer by Jon Sadka">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 
   <!-- Mobile features -->
   <link rel="apple-touch-startup-image" href="icons/apple-icon.png">
@@ -49,6 +49,7 @@
   <meta property="og:image" content="icons/ms-icon-310x310.png" />
 </head>
 <body>
+  <div class="warning-banner">This website has not been optimized for mobile devices.</div>
   <div id="left-column">
     <div id="top-container">
       <div class="logo">
