Style warning banner and add animation

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <meta property="og:image" content="icons/ms-icon-310x310.png" />
 </head>
 <body>
-  <div class="warning-banner">This website has not been optimized for mobile devices.</div>
+  <div class="warning-banner">This website hasn't been optimized for mobile devices</div>
   <div id="left-column">
     <div id="top-container">
       <div class="logo">
