Add Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
   <meta property="og:title" content="Steel Explorer" />
   <meta property="og:description" content="Steel Explorer by Jon Sadka" />
   <meta property="og:image" content="icons/ms-icon-310x310.png" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54247812-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-54247812-3');
+  </script>
 </head>
 <body>
   <div class="warning-banner">This site hasn't been optimized for mobile devices</div>
@@ -148,3 +158,4 @@
 <script src="./distributionChart.js"></script>
 <script src="./iChart.js"></script>
 <script src="./momentChart.js"></script>
+
